2003-11-24  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* hotlist.c (add_new_group_input): Clean up.
	* wtools.c (do_create_message): Eliminate g_strdup_printf().
	(bg_message): Likewise.

2003-11-21  Pavel Roskin  <proski@gnu.org>

	* view.c (check_left_right_keys): Implement fast scrolling if
	Ctrl is pressed.  Idea by Arpad Biro <biro_arpad@yahoo.com>

	* execute.c (do_execute): Use get_key_code(), not getch() to
	consume all characters from a single sequence.
	Reported by Miven Dooligan <dooligan@intergate.ca>

2003-11-20  Pavel Roskin  <proski@gnu.org>

	* glibcompat.h: Provide replacement for g_slist_delete_link().
	Reported by Pavel S. Shirshov <pavelsh@mail.ru>

2003-11-20  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* util.c (load_mc_home_file): Eliminate g_strdup_printf().

2003-11-19  Pavel Roskin  <proski@gnu.org>

	* user.c (expand_format): Preserve "%" if followed by a
	characted without special meaning.

2003-11-14  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* glibcompat.h: Define g_try_realloc as realloc for glib 1.2.x.

2003-11-14  Pavel Roskin  <proski@gnu.org>

	* main.c (midnight_callback): Ctrl-Shift-Enter now copies full
	path to the command line, like in Total Commander.

2003-11-07  Pavel Roskin  <proski@gnu.org>

	* boxes.c: Include "../vfs/gc.h" if VFS is used.
	* hotlist.c: Likewise.
	* key.c: Likewise.
	* main.c: Likewise.
	* setup.c: Likewise.

	* view.c (free_file): Don't use check_error_pipe(), display
	error messages in close_error_pipe().
	* utilunix.c (check_error_pipe): Remove, it's unused.

2003-10-30  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* widget.[ch] (listbox_search_text): Constify "text" argument.
	(listbox_add_item): Ditto.

	* find.c (add_to_list): Make inline.
	(stop_idle): Ditto.
	(status_update): Ditto.
	(get_list_info): Ditto.

	(push_directory): Constify "dir" argument and use
	concat_dir_and_file() instead of g_strdup().

	(find_add_match): Constify "dir" and "file" arguments.