@@ -1,3 +1,7 @@
+2003-11-24  Pavel Roskin  <proski@gnu.org>
+
+	* complete.c (check_is_cd): Simplify logic, use isspace().
+
 2003-11-24  Andrew V. Samoilov  <sav@bcs.zp.ua>
 
 	* hotlist.c (add_new_group_input): Clean up.
